k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-svc
spec:
  selector:
    env: dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
