k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /health
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /health
            pathType: Exact
            backend:
              service:
                name: k8s-svc
                port:
                  number: 80
          - path: /otusapp/vyacheslav/
            pathType: Prefix
            backend:
              service:
                name: k8s-svc
                port:
                  number: 80
